# FsLogger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-build.yml
include/: fsdate.hpp  fserror.hpp  fslogger.hpp  fslogging.hpp
src/: fsdate.cpp  fslogger.cpp  main.cpp
